--- a/_config.yml
+++ b/_config.yml
@@ -6,17 +6,17 @@ repository: Git repository where your resume will be hosted, only required if yo
 version: 2
 
 # Personal info
-name: Your Name
-title: Your job title
-email: Your email (optional)
+name: Kaylee Green
+title: Student
+email: kgreen091807@gmail.com
 # email_title: Email (Email title override)
-phone: Your phone number (optional)
+phone: 561-873-6191
 # phone_title: Phone (Phone title override)
 website: Your website (eg. https://google.com)(optional)
 # website_title: Web (Website title override)
 
 # Dark Mode (true/false/never)
-darkmode: false
+darkmode: true
 
 # Social links
 twitter_username: jekyllrb
@@ -25,10 +25,10 @@ stackoverflow_username: "00000001"
 dribbble_username: jekyll
 facebook_username: jekyll
 flickr_username: jekyll
-instagram_username: jekyll
+instagram_username: feenforkaylee
 linkedin_username: jekyll
 xing_username: jekyll
-pinterest_username: jekyll
+pinterest_username: feenfokaylee
 youtube_username: jekyll
 orcid_username: 0000-0000-0000-0000
 googlescholar_username: D847cGsAAAAJ
